--- a/SystemProgramming_FinalTask_2/SystemProgramming_FinalTask_2.csproj
+++ b/SystemProgramming_FinalTask_2/SystemProgramming_FinalTask_2.csproj
@@ -35,8 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,10 +59,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\UCCommands\UCBtnClick.cs" />
+    <Compile Include="Entities\ProcessInfo.cs" />
+    <Compile Include="Helper\Report.cs" />
+    <Compile Include="ViewModels\FirstModeVM.cs" />
     <Compile Include="ViewModels\MainWindowVM.cs" />
-    <Compile Include="ViewModels\ModelSelectionUCVM.cs" />
+    <Compile Include="ViewModels\ModeSelectionUCVM.cs" />
+    <Compile Include="ViewModels\SecondModeVM.cs" />
+    <Compile Include="ViewModels\ThirdModeVM.cs" />
+    <Compile Include="Views\UserControls\FirstModeUC.xaml.cs">
+      <DependentUpon>FirstModeUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserControls\ModeSelectionUC.xaml.cs">
       <DependentUpon>ModeSelectionUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\SecondModeVM.cs">
+      <DependentUpon>SecondModeUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\ThirdModeUC.xaml.cs">
+      <DependentUpon>ThirdModeUC.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -72,7 +91,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\UserControls\FirstModeUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\UserControls\ModeSelectionUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\SecondModeUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\ThirdModeUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -95,6 +126,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -103,8 +135,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
